# cppnetlib

./: .clang-format  .travis.yml  CMakeLists.txt  LICENSE  README.md  clang-format-lib.sh
example/: main.cpp
include/: Platform.h
include/Endian/include/Endian/: Endian.h
include/cppnetlib/: Platform.h  PlatformDependent.h  cppnetlib.h  platformDetect.h
include/cppnetlib/Platform/include/Platform/: Platform.h  PlatformDependent.h
include/cppnetlib/endian/: endian.h
include/cppnetlib/platform/: platform.h  platform_dependent.h
src/: cppnetlib.cpp
